--- a/Styles/Stylesheet.css
+++ b/Styles/Stylesheet.css
@@ -7,7 +7,6 @@ and open the template in the editor.
     Created on : 13-Oct-2016, 12:42:42
     Author     : Jake Valino
 */
-@media screen and (min-width: 800px) { /*The following CSS runs only for displays with a width (in pixels) of more than 800px*/
 body
 {
     font-family: lucida grande, tahoma, verdana, arial, sans-serif;
@@ -21,43 +20,23 @@ body p
     line-height: 1.28;
 }
 
-#wrapper
-{
-    width: 1300px;
-    background-color: white;
-    margin: 0 auto;
-    padding: 10px;
-}
-
 #bannerAndSearchBar
 {
-    background-repeat: no-repeat;
     background-color: #0076be;
-    height: 60px;
     font-size: 14px;
-    margin-top: -10px;
-    margin-left: -5px;
-    width: 1295px;
 }
 
 #content_area
 {
-    float: right;
     border: 3px solid #E3E3E3;
     border-radius: 10px;
-    width: 1050px;
     margin: 20px 0 20px 0;
-    padding-left: 10px;
     padding-bottom: 10px;
-    padding-top: 10px;
     background-color: #f5f5f5;
 }
 
 #sidebar
 {
-    float: left;
-    width: 210px;
-    height: 573px;
     margin: 20px 10px;
     padding: 10px;
     border: 2px solid #E3E3E3;
@@ -176,57 +155,52 @@ footer
 
 .login-form
 {
-    float: left;
     border: 3px solid #E3E3E3;
     border-radius: 10px;
-    width: 675px;
     padding-left: 10px;
     padding-bottom: 140px;
-    margin-left: 150px;
-    margin-top: 50px;
-    margin-bottom: 135px;
     background-color: white;
 }
 
 .register-form
 {
-    float: left;
     border: 3px solid #E3E3E3;
     border-radius: 10px;
-    width: 700px;
     padding-left: 10px;
     padding-bottom: 10px;
-    margin-left: 165px;
-    margin-top: 50px;
-    margin-bottom: 114px;
+    background-color: white;
+}
+
+.insertJob-form
+{
+    border: 3px solid #E3E3E3;
+    border-radius: 10px;
+    padding-bottom: 10px;
+    background-color: white;
+}
+
+.editJob-form
+{
+    border: 3px solid #E3E3E3;
+    border-radius: 10px;
+    padding-bottom: 10px;
     background-color: white;
 }
 
 .clearfix
 {
     padding-bottom: 10px;
-    padding-left: 50px;
+    padding-left: 10px;
 }
 
 .registerANewAccount
 {
-    margin-left: 54px;
 }
 
 .loginLink
 {
-    margin-top: 10px;
-    float: right;
-    position: relative;
     background-color: white;
     padding: 10px 10px 10px 10px;
-    margin-right: 40px;
-}
-
-.errorMessage
-{
-    margin-left: 300px;
-
 }
 
 #aboutFreelanceMe
@@ -239,8 +213,6 @@ footer
 /* Profile sidebar */
 .profile-sidebar {
   padding: 20px 0 10px 0;
-  margin-left: -23px;
-  width: 200px;
   background: #fff;
 }
 
@@ -284,7 +256,6 @@ footer
   font-size: 11px;
   font-weight: 600;
   padding: 6px 15px;
-  margin-right: 5px;
 }
 
 .profile-userbuttons .btn:last-child {
@@ -330,10 +301,115 @@ footer
   margin-left: -2px;
 }
 
-.overviewContent
+.AdvertisedJobs
 {
-    width: 800px;
-    border: 3px solid #f6f9fb;
-    
+    border: 3px solid gray;  
 }
+
+.OfferPlacedContent
+{
+    border: 3px solid gray;
+}
+
+.ListofOffers
+{
+    border: 3px solid gray;
+}
+
+.Notifications
+{
+    border: 3px solid gray;
+}
+
+.deleteUser
+{
+    width: 100px;
+    float: right;
+    margin-top: -70px;
+    margin-right: 10px;
+}
+
+.searchResultTable
+{
+    background-color: white
+}
+
+
+
+
+
+
+.home-usermenu {
+}
+
+.home-usermenu ul li {
+  border-bottom: 1px solid #f0f4f7;
+}
+
+.home-usermenu ul li:last-child {
+  border-bottom: none;
+}
+
+.home-usermenu ul li a {
+  color: #93a3b5;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.home-usermenu ul li a i {
+  margin-right: 8px;
+  font-size: 14px;
+}
+
+.home-usermenu ul li a:hover {
+  background-color: #fafcfd;
+  color: #5b9bd1;
+}
+
+.home-usermenu ul li.active {
+  border-bottom: none;
+}
+
+.home-usermenu ul li.active a {
+  color: #5b9bd1;
+  background-color: #f6f9fb;
+  border-left: 2px solid #5b9bd1;
+  margin-left: -2px;
+}
+
+/* The Modal (background) */
+.modal {
+display: none;
+padding-top: 100px;
+left: 0;
+top: 0;
+width: 100%;
+height: 100%;
+overflow: auto;
+}
+
+/* Modal Content */
+.modal-content {
+position: relative;
+background-color: #fefefe;
+margin: auto;
+padding: 0;
+width: 60%;
+max-width: 1200px;
+}
+
+.scrollit {
+    overflow:scroll;
+    height:250px;
+}
+
+.input[type=text] {
+    width: 130px;
+    -webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;
+}
+
+/* When the input field gets focus, change its width to 100% */
+input[type=text]:focus {
+    width: 70%;
 }
