--- a/Styles/Stylesheet.css
+++ b/Styles/Stylesheet.css
@@ -413,3 +413,59 @@ max-width: 1200px;
 input[type=text]:focus {
     width: 70%;
 }
+
+	.msg-container {
+		width: 100%;
+		height: 100%;
+	}
+        
+	.msg-area {
+		height: 200px;
+		width: 100%;
+		background-color:#FFF;
+		overflow-y: auto;
+	}
+	.msginput {
+		padding: 5px;
+		margin: 10px;
+		font-size: 14px;
+		width: calc(100% - 20px);
+		outline: none;
+	}
+        
+        .msg {
+		margin: 10px 10px;
+		background-color: #f1f0f0;
+		max-width: calc(45% - 20px);
+		color: #000;
+		padding: 10px;
+		font-size: 14px;
+	}
+	.msgfrom {
+		background-color: #0084ff;
+		color: #FFF;
+		margin: 10px 10px 10px 55%;
+	}
+	.msgarr {
+		width: 0;
+		height: 0;
+		border-left: 8px solid transparent;
+		border-right: 8px solid transparent;
+		border-bottom: 8px solid #f1f0f0;
+		transform: rotate(315deg);
+		margin: -12px 0px 0px 45px;
+	}
+	.msgarrfrom {
+		border-bottom: 8px solid #0084ff;
+		float: right;
+		margin-right: 45px;
+	}
+	.msgsentby {
+		color: #8C8C8C;
+		font-size: 12px;
+		margin: 4px 0px 0px 10px;
+	}
+	.msgsentbyfrom {
+		float: right;
+		margin-right: 12px;
+	}
