--- a/Styles/Stylesheet.css
+++ b/Styles/Stylesheet.css
@@ -624,3 +624,26 @@ ul.img-list li:hover span.text-content {
   -moz-border-radius: 50% !important;
   border-radius: 50% !important;
 }
+
+#map {
+        height: 400px;
+        width: 100%;
+}
+
+ #right-panel {
+font-family: 'Roboto','sans-serif';
+line-height: 30px;
+padding-left: 10px;
+}
+
+#right-panel select, #right-panel input {
+    font-size: 15px;
+}
+
+#right-panel select {
+    width: 100%;
+}
+
+#right-panel i {
+    font-size: 12px;
+}
